--- a/Swift_SweetSugar/Swift_SweetSugar/TestVC/CoreAnimation/MMLayerAnimationVC.xib
+++ b/Swift_SweetSugar/Swift_SweetSugar/TestVC/CoreAnimation/MMLayerAnimationVC.xib
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19115.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19115.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <accessibilityOverrides isEnabled="YES" dynamicTypePreference="2"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19107.4"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19107.5"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -12,8 +12,10 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MMLayerAnimationVC" customModule="Swift_SweetSugar" customModuleProvider="target">
             <connections>
+                <outlet property="animationImgView" destination="sy1-oR-8ou" id="vTN-hF-JXI"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
                 <outlet property="view_1" destination="uyQ-4R-AML" id="agw-i0-l4t"/>
+                <outlet property="view_2" destination="NXJ-I5-PHw" id="YPW-v4-DGl"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -39,12 +41,39 @@
                         <constraint firstItem="sQb-fj-gTx" firstAttribute="top" secondItem="uyQ-4R-AML" secondAttribute="top" constant="10" id="WCQ-OG-Y9c"/>
                     </constraints>
                 </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NXJ-I5-PHw">
+                    <rect key="frame" x="10" y="124" width="394" height="30"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="X7F-3O-bFW">
+                            <rect key="frame" x="20" y="0.0" width="354" height="30"/>
+                            <color key="backgroundColor" systemColor="tertiaryLabelColor"/>
+                        </view>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="sy1-oR-8ou">
+                            <rect key="frame" x="0.0" y="0.0" width="394" height="30"/>
+                        </imageView>
+                    </subviews>
+                    <color key="backgroundColor" red="1" green="0.50588235290000005" blue="0.50588235290000005" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstItem="X7F-3O-bFW" firstAttribute="leading" secondItem="NXJ-I5-PHw" secondAttribute="leading" constant="20" id="I9p-Tu-FO1"/>
+                        <constraint firstItem="sy1-oR-8ou" firstAttribute="leading" secondItem="NXJ-I5-PHw" secondAttribute="leading" id="Loc-5k-lDv"/>
+                        <constraint firstAttribute="bottom" secondItem="X7F-3O-bFW" secondAttribute="bottom" id="M57-Rf-0NX"/>
+                        <constraint firstAttribute="trailing" secondItem="sy1-oR-8ou" secondAttribute="trailing" id="UIW-Gv-lQD"/>
+                        <constraint firstAttribute="trailing" secondItem="X7F-3O-bFW" secondAttribute="trailing" constant="20" id="Ubk-vW-LAr"/>
+                        <constraint firstItem="X7F-3O-bFW" firstAttribute="top" secondItem="NXJ-I5-PHw" secondAttribute="top" id="eaz-6l-JVx"/>
+                        <constraint firstItem="sy1-oR-8ou" firstAttribute="top" secondItem="NXJ-I5-PHw" secondAttribute="top" id="p02-p9-boe"/>
+                        <constraint firstAttribute="height" constant="30" id="pvV-7Q-aig"/>
+                        <constraint firstAttribute="bottom" secondItem="sy1-oR-8ou" secondAttribute="bottom" id="uvo-Ap-ULR"/>
+                    </constraints>
+                </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="NXJ-I5-PHw" secondAttribute="trailing" constant="10" id="XM3-P1-aTP"/>
                 <constraint firstItem="uyQ-4R-AML" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="10" id="htN-yp-vWI"/>
+                <constraint firstItem="NXJ-I5-PHw" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="10" id="nlj-9d-GuA"/>
                 <constraint firstItem="uyQ-4R-AML" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="10" id="y3B-j1-ANG"/>
+                <constraint firstItem="NXJ-I5-PHw" firstAttribute="top" secondItem="uyQ-4R-AML" secondAttribute="bottom" constant="20" id="ydu-hg-ili"/>
             </constraints>
             <point key="canvasLocation" x="131.8840579710145" y="90.401785714285708"/>
         </view>
@@ -55,6 +84,9 @@
         </systemColor>
         <systemColor name="systemGreenColor">
             <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="tertiaryLabelColor">
+            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.29999999999999999" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
