--- a/Swift_SweetSugar/Swift_SweetSugar/TestVC/Gesture/GestureTestVC.xib
+++ b/Swift_SweetSugar/Swift_SweetSugar/TestVC/Gesture/GestureTestVC.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19115.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19115.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19107.4"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19107.5"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -11,6 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="GestureTestVC" customModule="Swift_SweetSugar" customModuleProvider="target">
             <connections>
+                <outlet property="controlView" destination="4Ha-Oo-mhk" id="HZu-UX-dtN"/>
                 <outlet property="touchView" destination="TCZ-Kb-dn3" id="ccb-2V-rcA"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -25,7 +26,7 @@
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Cjc-Yg-w2M" customClass="MMButton" customModule="Swift_SweetSugar" customModuleProvider="target">
                             <rect key="frame" x="50" y="50" width="50" height="50"/>
-                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <color key="backgroundColor" systemColor="systemTealColor"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="50" id="ibh-Ux-6dH"/>
                                 <constraint firstAttribute="width" constant="50" id="p41-5d-0oH"/>
@@ -65,9 +66,6 @@
                         <constraint firstAttribute="width" constant="60" id="TeN-Er-8bp"/>
                         <constraint firstAttribute="height" constant="40" id="c1J-sd-BXl"/>
                     </constraints>
-                    <connections>
-                        <action selector="handleControlClick:" destination="-1" eventType="touchUpInside" id="2Mf-lM-i1e"/>
-                    </connections>
                 </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
@@ -90,6 +88,9 @@
         </systemColor>
         <systemColor name="systemPinkColor">
             <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemTealColor">
+            <color red="0.18823529411764706" green="0.69019607843137254" blue="0.7803921568627451" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
